--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -3,6 +3,10 @@ spring:
     name: eureka-server
   zipkin:
     base-url: http://localhost:8080
+  boot:
+    admin:
+      client:
+        url: http://localhost:2000
 
 server:
   port: 7000
