update admin client config for eureka

--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -20,3 +20,11 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
