update eureka url
Signed-off-by: xiliangMa <xiliangMa@outlook.com>

--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -16,7 +16,7 @@ eureka:
     hostname: eureka-server-7000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://localhost:7000/eureka
     fetch-registry: false
     register-with-eureka: false
 
