--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -2,11 +2,11 @@ spring:
   application:
     name: eureka-server
   zipkin:
-    base-url: http://localhost:8080
+    base-url: http://zipkin-service-3000:8080
   boot:
     admin:
       client:
-        url: http://localhost:2000
+        url: http://admin-service-2000:2000
 
 server:
   port: 7000
@@ -16,7 +16,7 @@ eureka:
     hostname: eureka-server-7000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
     fetch-registry: false
     register-with-eureka: false
 
