--- a/mscloud/consumer-service-feign-dev.yml
+++ b/mscloud/consumer-service-feign-dev.yml
@@ -16,7 +16,7 @@ eureka:
     hostname: consumer-service-feign-9001
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
 # 开启feign 熔断器
 feign:
