--- a/mscloud/provider-service-dev.yml
+++ b/mscloud/provider-service-dev.yml
@@ -16,7 +16,7 @@ eureka:
     hostname: provider-service-8000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
 management:
   endpoints:
