--- a/mscloud/zipkin-service-dev.yml
+++ b/mscloud/zipkin-service-dev.yml
@@ -14,7 +14,7 @@ eureka:
     hostname: zipkin-service-3000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
 management:
   metrics:
