--- a/mscloud/zuul-service-dev.yml
+++ b/mscloud/zuul-service-dev.yml
@@ -16,7 +16,7 @@ eureka:
     hostname: api-gateway-5000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka
+      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
 zuul:
   routes:
