--- a/mscloud/config-service-dev.yml
+++ b/mscloud/config-service-dev.yml
@@ -16,6 +16,7 @@ spring:
           search-paths: mscloud
           username:
           password:
+          skip-ssl-validation: true
 
 server:
   port: 8888
