--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -13,10 +13,14 @@ server:
 
 eureka:
   instance:
-    hostname: eureka-server-7000
+    # k8s
+    hostname: mscloud-eureka-service
+    # hostname: eureka-server-7000
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
+      # k8s
+      defaultZone: mscloud-eureka-service:7000/eureka/
+      # defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
     fetch-registry: false
     register-with-eureka: false
   server:
