--- a/mscloud/admin-service-dev.yml
+++ b/mscloud/admin-service-dev.yml
@@ -9,8 +9,10 @@ server:
 
 eureka:
   instance:
-    hostname: admin-service-2000
+    hostname: mscloud-admin-service
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
+      # k8s
+      defaultZone: http://mscloud-eureka-service:7000/eureka/
+      # defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
