update config for zipkin

--- a/mscloud/zipkin-service-dev.yml
+++ b/mscloud/zipkin-service-dev.yml
@@ -11,10 +11,12 @@ server:
 
 eureka:
   instance:
-    hostname: zipkin-service-3000
+    hostname: mscloud-zipkin-service
   client:
     service-url:
-      defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
+      # k8s
+      defaultZone: http://mscloud-eureka-service:7000/eureka/
+      # defaultZone: http://eureka-server-7000:7000/eureka/, http://eureka-server-7001:7001/eureka/, http://eureka-server-7002:7002/eureka/
 
 management:
   metrics:
