--- a/mscloud/eureka-service-dev.yml
+++ b/mscloud/eureka-service-dev.yml
@@ -2,11 +2,11 @@ spring:
   application:
     name: eureka-server
   zipkin:
-    base-url: http://zipkin-service-3000:8080
+    base-url: http://mscloud-zipkin-service:8080
   boot:
     admin:
       client:
-        url: http://admin-service-2000:2000
+        url: http://mscloud-admin-service:2000
 
 server:
   port: 7000
