--- a/mscloud/provider-service-dev.yml
+++ b/mscloud/provider-service-dev.yml
@@ -7,6 +7,10 @@ spring:
     admin:
       client:
         url: http://mscloud-admin-service:2000
+        instance:
+          management-url: http://mscloud-provider-service:8000/actuator
+          health-url: http://mscloud-provider-service:8000/actuator/health
+          service-url: http://mscloud-provider-service:8000
 
 server:
   port: 8000
