--- a/mscloud/zuul-service-dev.yml
+++ b/mscloud/zuul-service-dev.yml
@@ -7,6 +7,10 @@ spring:
     admin:
       client:
         url: http://mscloud-admin-service:2000
+        instance:
+          management-url: http://mscloud-api-gateway-service:5000/actuator
+          health-url: http://mscloud-api-gateway-service:5000/actuator/health
+          service-url: http://mscloud-api-gateway-service:5000
 
 server:
   port: 5000
