remove config model file  and update config for zuul

--- a/mscloud/zuul-service-dev.yml
+++ b/mscloud/zuul-service-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: mscloud-zuul
+    name: zuul
   zipkin:
     base-url: http://mscloud-zipkin-service:8080
   boot:
